--- a/content/en/1.getting-started/2.introduction.md
+++ b/content/en/1.getting-started/2.introduction.md
@@ -1,54 +1,58 @@
 ---
 title: Introduction
-description: Welcome to Docus theme documentation.
+description: Learn about 3Cycle modular construction system and its core principles.
 navigation:
   icon: i-lucide-house
 seo:
-  title: Introduction
-  description: Discover how to create, manage, and publish documentation
-    effortlessly with Docus.
+  title: Introduction to 3Cycle
+  description: Discover the 3Cycle modular timber construction system from Estonia
 ---
 
-Welcome to **Docus**, a fully integrated documentation solution built with [Nuxt UI](https://ui.nuxt.com).
+Welcome to **3Cycle**, an open-source modular timber construction system designed for flexibility, sustainability, and precision.
 
-## What is Docus?
+## What is 3Cycle?
 
-Docus is a theme based on the [UI documentation template](https://docs-template.nuxt.dev/). While the visual style comes ready out of the box, your focus should be on writing content using the Markdown and [MDC syntax](https://content.nuxt.com/docs/files/markdown#mdc-syntax) provided by [Nuxt Content](https://content.nuxt.com).
+3Cycle is a comprehensive system of standardized components that work together to create efficient, modular building structures. Developed in Estonia, it combines decades of construction expertise with modern manufacturing techniques to deliver a scalable, sustainable approach to building.
 
-We use this theme across all our Nuxt module documentations, including:
+The system is designed for:
 
-::card-group
-  :::card
-  ---
-  icon: i-simple-icons-nuxtdotjs
-  target: _blank
-  title: Nuxt Image
-  to: https://image.nuxt.com
-  ---
-  The documentation of `@nuxt/image`
-  :::
+- **Architects** - Complete freedom to design with standardized building blocks
+- **Builders** - Efficient assembly with precision-manufactured components
+- **Developers** - Open documentation and specifications for implementation
 
-  :::card
-  ---
-  icon: i-simple-icons-nuxtdotjs
-  target: _blank
-  title: Nuxt Supabase
-  to: https://supabase.nuxtjs.org
-  ---
-  The documentation of `@nuxt/supabase`
-  :::
-::
+## Core Principles
 
-## Key Features
+### Standardization
 
-This theme includes a range of features designed to improve documentation management:
+All components follow consistent design rules and manufacturing standards. This ensures:
+- **Dimensional coordination** - Standard sizing grids across all components
+- **Connection compatibility** - Universal joining methods throughout the system
+- **Predictable performance** - Consistent material specifications and tolerances
 
-- **Powered by** [**Nuxt 4**](https://nuxt.com): Utilizes the latest Nuxt framework for optimal performance.
-- **Built with** [**Nuxt UI**](https://ui.nuxt.com): Integrates a comprehensive suite of UI components.
-- [**MDC Syntax**](https://content.nuxt.com/usage/markdown) **via** [**Nuxt Content**](https://content.nuxt.com): Supports Markdown with component integration for dynamic content.
-- [**Nuxt Studio**](https://content.nuxt.com/docs/studio) **Compatible**: Write and edit your content visually. No Markdown knowledge is required!
-- **Auto-generated Sidebar Navigation**: Automatically generates navigation from content structure.
-- **Full-Text Search**: Includes built-in search functionality for content discovery.
-- **Optimized Typography**: Features refined typography for enhanced readability.
-- **Dark Mode**: Offers dark mode support for user preference.
-- **Extensive Functionality**: Explore the theme to fully appreciate its capabilities.
+### Modularity
+
+Components are designed for flexible combination:
+- Mix and match components to suit project requirements
+- Reconfigure assemblies as needs change
+- Upgrade or replace individual components independently
+
+### Sustainability
+
+Built with environmental responsibility:
+- Timber-based construction with sustainable sourcing
+- Long-term durability reduces environmental impact
+- Open-source documentation minimizes waste through precision
+
+## System Components
+
+3Cycle is built from three main component categories:
+
+1. **Structural Components** - Load-bearing modules and connections
+2. **Enclosure Components** - Walls, insulation, and opening systems
+3. **Service Components** - Utility integration and access points
+
+Each category works together to create complete, functional buildings from standardized, interchangeable parts.
+
+## Getting Started
+
+Explore the documentation to learn more about designing and implementing 3Cycle structures.
