try edit from prod
Co-authored-by: Nuxt Studio <noreply@nuxt.studio>

--- a/content/en/1.getting-started/2.introduction.md
+++ b/content/en/1.getting-started/2.introduction.md
@@ -12,6 +12,8 @@ Welcome to **3Cycle**, an open-source modular timber construction system designe
 
 ## What is 3Cycle?
 
+And why 3?
+
 3Cycle is a comprehensive system of standardized components that work together to create efficient, modular building structures. Developed in Estonia, it combines decades of construction expertise with modern manufacturing techniques to deliver a scalable, sustainable approach to building.
 
 The system is designed for:
