--- a/content/en/1.getting-started/2.introduction.md
+++ b/content/en/1.getting-started/2.introduction.md
@@ -1,6 +1,7 @@
 ---
 title: Introduction
 description: Learn about 3Cycle modular construction system and its core principles.
+links: []
 navigation:
   icon: i-lucide-house
 seo:
@@ -11,10 +12,6 @@ seo:
 Welcome to **3Cycle**, an open-source modular timber construction system designed for flexibility, sustainability, and precision.
 
 ## What is 3Cycle?
-
-And why 3?
-
-`And another edit to see if it works`
 
 3Cycle is a comprehensive system of standardized components that work together to create efficient, modular building structures. Developed in Estonia, it combines decades of construction expertise with modern manufacturing techniques to deliver a scalable, sustainable approach to building.
 
